# ai4s-in-x

./: .gitignore  README.md  analysis_plan.md  compliance_and_ethics.md  environment.yml  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.lock.txt  research_brief.md
.github/workflows/: ci.yml
archive/legacy_collection_runtime/: PROVENANCE.md  README.md
archive/legacy_examples/examples_legacy/: deidentified_sample_note.json
archive/legacy_exports/: README.md
archive/legacy_specs/: AI4S_DATABASE_DIAGRAMS.drawio  README.md
archive/legacy_tests/: README.md
codebook/: adjudication_log.md  codebook.md  coding_rules.md  legacy_mapping.md
data/: data_schema.md
data/processed/: README.md
data/raw/queues/: details_comments_queue.json
data/raw/search/: AI.json  ChatGPT.json  Claude.json  Copilot.json  GPT-4o.json  GPT4.json  Gemini.json
database/: README.md  schema.sql  views.sql  views.sql.template
docs/: canonical_backfill_contract.md  local_git_maintenance.md  paper_outline_v2.md  repository_boundaries.md  runtime_environment_snapshot.md  theoretical_framework_v2.md
docs/figures/: README.md
docs/literature_notes/: README.md
docs/meeting_notes/: README.md
docs/memos/: README.md
docs/paper_working/: README.md  evidence_ledger_quality_v6.md  framework_v2_chapter_3_research_design_draft.md  framework_v2_chapter_4_practice_map_draft.md  framework_v2_chapter_5_intervention_normative_evaluation_draft.md  framework_v2_chapter_6_boundary_negotiation_draft.md  paper_conclusion_chapter_draft.md  paper_discussion_chapter_llm.md  paper_gap_checklist_quality_v6.md  paper_master_manuscript_draft.md  paper_master_manuscript_quality_v6_cn.md  paper_results_chapter_draft.md  paper_results_chapter_llm.md  quality_v6_source_of_truth_note.md
notebooks/: 01_data_audit.ipynb  02_cleaning_checks.ipynb  03_coding_exploration.ipynb  04_analysis_outputs.ipynb  README.md
outputs/excerpts/: boundary_boundary_assistance_vs_substitution.md  comment_stance_中性经验帖.md  comment_stance_批判_担忧.md  comment_stance_明确拒绝.md  comment_stance_积极但保留.md  comment_stance_积极采用.md  post_stance_中性经验帖.md  post_stance_批判_担忧.md  post_stance_明确拒绝.md  post_stance_积极但保留.md  post_stance_积极采用.md  workflow_uncertain.md  workflow_学术交流与科研管理.md  workflow_数据获取与预处理.md  workflow_文献检索与综述.md  workflow_研究设计与实验_方案制定.md  workflow_编码_建模_统计分析.md  workflow_论文写作_投稿_审稿回复.md  workflow_选题与问题定义.md
outputs/reports/freeze_checkpoints/: canonical_backfill_manifest.json  quality_v4_audit_snapshot.json  quality_v4_consistency_report.json  quality_v4_freeze_checkpoint.json  quality_v4_freeze_checkpoint.md  quality_v5_artifact_provenance.json  quality_v5_consistency_report.json  quality_v5_freeze_checkpoint.json  quality_v5_freeze_checkpoint.md  quality_v6_artifact_provenance.json  quality_v6_consistency_report.json  quality_v6_freeze_checkpoint.json  quality_v6_freeze_checkpoint.md  quality_v6_research_db_summary.json  research_db_summary.json
outputs/reports/paper_materials/: collection_status.snapshot.json  paper_abstract_submission_cn.md  paper_abstract_submission_cn_clean.md  paper_analysis_snapshot.json  paper_analysis_snapshot.md  paper_conclusion_chapter_llm.md  paper_conclusion_chapter_submission_cn_clean.md  paper_discussion_chapter_draft.md  paper_discussion_chapter_submission_cn_clean.md  paper_introduction_submission_cn.md  paper_introduction_submission_cn_clean.md  paper_master_manuscript_llm.md  paper_master_manuscript_llm_merged.md  paper_master_manuscript_quality_v6_submission_cn_clean.md  paper_master_manuscript_submission_cn.md  paper_master_manuscript_submission_cn_clean.md  paper_materials_manifest.json  paper_methods_limitations_submission_cn.md  paper_methods_limitations_submission_cn_clean.md  paper_methods_snapshot.md  paper_methods_transparency_appendix_cn.md  paper_methods_transparency_appendix_cn_clean.md  paper_results_chapter_submission_cn.md  paper_results_chapter_submission_cn_clean.md  paper_results_snapshot.md  quality_v4_delta_report.md  quality_v4_evidence_matrix.md  quality_v4_method_limitations.md  (+2 more)
outputs/tables/: external_xhs_ai4s_2025plus_pilot100.jsonl  external_xhs_ai4s_lightpush_20260428_2queries.jsonl  external_xhs_ai4s_smoketest_3queries.jsonl  external_xhs_ai4s_smoketest_3queries_v2.jsonl
scripts/: artifact_health.py  build_paper_artifacts.py  repo_health.py
src/: __init__.py
src/ai4s_legitimacy/: __init__.py
src/analysis/: excerpt_extraction.py  figure_generation.py  quality_v4_consistency.py  reporting.py
src/cleaning/: normalization.py
src/cli/: build_artifacts.py  import_legacy.py
src/coding/: codebook_seed.py
src/collection/: import_legacy_sqlite.py
src/config/: __init__.py  research_scope.py  settings.py
src/utils/: paths.py
tasks/: backlog.md  changelog.md  restructure_inventory.md  roadmap.md
tests/: test_analysis_consistency.py  test_build_artifacts.py  test_canonical_backfill.py  test_canonical_schema.py  test_cleaning.py  test_coding_rules.py  test_db_utils.py  test_development_contracts.py  test_documentation_consistency.py  test_excerpt_extraction.py  test_external_xhs_opencli_pilot.py  test_external_xhs_post_expansion.py  test_figure_datasets.py  test_figure_reproducibility.py  test_framework_v2_artifacts.py  test_framework_v2_codebook.py  test_framework_v2_coding_audit.py  test_framework_v2_docs.py  test_framework_v2_review_flow.py  test_legacy_import_migration.py  test_llm_prefill_post_review.py  test_llm_rescreen_posts.py  test_package_namespace.py  test_quality_v6_formalization.py  test_rebaseline_workflow.py  test_repo_health.py  test_reporting_contracts.py  test_repository_boundaries.py  test_research_baseline.py  test_review_v2_artifacts.py  test_schema.py  test_submission_artifacts.py  test_views_rendering.py  test_xhs_expansion_candidate_v1.py  test_xhs_expansion_review_precheck.py  test_xhs_expansion_review_queue.py  test_xhs_expansion_supplemental_analysis.py
(+365 files in other folders)
