[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4s-legitimacy"
version = "0.1.0"
description = "Research engineering pipeline for AI4S on Xiaohongshu"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    {name = "gxbeing"},
]
keywords = ["research-engineering", "xiao-hong-shu", "sqlite", "ai4s"]
dependencies = [
    "pandas>=2.2",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "certifi>=2026.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "jupyterlab>=4.2",
    "ruff>=0.11",
    "mypy>=1.20",
]

[project.urls]
Repository = "https://github.com/guoyufan999-cloud/ai4s-in-x"

[project.scripts]
ai4s-build-artifacts = "ai4s_legitimacy.cli.build_artifacts:main"
ai4s-import-legacy = "ai4s_legitimacy.cli.import_legacy:main"
ai4s-export-baseline-audit = "ai4s_legitimacy.cli.export_baseline_audit:main"
ai4s-export-review-queue = "ai4s_legitimacy.cli.export_review_queue:main"
ai4s-prepare-review-batches = "ai4s_legitimacy.cli.prepare_review_batches:main"
ai4s-import-reviewed-decisions = "ai4s_legitimacy.cli.import_reviewed:main"
ai4s-llm-rescreen-posts = "ai4s_legitimacy.cli.llm_rescreen_posts:main"
ai4s-llm-prefill-post-review = "ai4s_legitimacy.cli.llm_prefill_post_review:main"
ai4s-external-xhs-opencli-pilot = "ai4s_legitimacy.cli.external_xhs_opencli_pilot:main"
ai4s-backfill-canonical-history = "ai4s_legitimacy.cli.backfill_canonical:main"

[tool.setuptools]
py-modules = []

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai4s_legitimacy*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
files = [
    "scripts/repo_health.py",
    "scripts/artifact_health.py",
    "src/ai4s_legitimacy/collection/canonical_utils.py",
    "src/ai4s_legitimacy/collection/canonical_claim_units.py",
    "src/ai4s_legitimacy/collection/canonical_rows.py",
    "src/ai4s_legitimacy/collection/canonical_schema.py",
    "src/ai4s_legitimacy/collection/_canonical_review.py",
    "src/ai4s_legitimacy/collection/llm_prefill_normalization.py",
    "src/ai4s_legitimacy/collection/llm_prefill_prompts.py",
    "src/ai4s_legitimacy/collection/llm_prefill_canonical.py",
    "src/ai4s_legitimacy/collection/llm_prefill_post_review.py",
    "src/ai4s_legitimacy/collection/llm_rescreen_prompts.py",
    "src/ai4s_legitimacy/collection/llm_rescreen_rules.py",
    "src/ai4s_legitimacy/collection/llm_rescreen_outputs.py",
    "src/ai4s_legitimacy/collection/llm_rescreen_batching.py",
    "src/ai4s_legitimacy/collection/llm_rescreen_pipeline.py",
    "src/ai4s_legitimacy/collection/llm_rescreen_posts.py",
    "src/ai4s_legitimacy/collection/review_queue.py",
    "src/ai4s_legitimacy/collection/review_v2_artifacts.py",
    "src/ai4s_legitimacy/collection/reviewed_import.py",
]
